--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     Splash screen
     -------------
-    • Shows your gold-foil crest and the owner name from owner-name.txt
+    • Shows your gold-foil crest and the owner name saved on THIS device
     • A single tap moves into the Harbour Pools overview map.
   -->
   <div class="splash-overlay">
