--- a/overview.html
+++ b/overview.html
@@ -35,10 +35,7 @@
         <button id="openAppBtn" class="pill primary" type="button">
           Open Maps
         </button>
-        <button id="changeNameBtn" class="pill ghost" type="button">
-          Change name
-        </button>
-        <button id="resetProfileBtn" class="pill ghost" type="button">Reset Profile</button>
+        <button id="resetProfileBtn" class="pill ghost" type="button">Reset profile</button>
 <a href="index.html" class="pill ghost">Exit</a>
       </div>
     </div>
