--- a/overview.html
+++ b/overview.html
@@ -35,7 +35,10 @@
         <button id="openAppBtn" class="pill primary" type="button">
           Open Maps
         </button>
-<a href="index.html" class="pill ghost">Exit</a>
+        <button id="changeNameBtn" class="pill ghost" type="button">
+          Change name
+        </button>
+        <a href="index.html" class="pill ghost">Exit</a>
       </div>
     </div>
   </header>
